Completed Index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Cyfred Go-IT-Markup Homework 2</title>
+    <title>Cyfred Go-IT-Markup Homework 3</title>
     <meta name="description" content="Cyfred Go-IT-Markup Homework 2" >
     <meta charset="utf-8" >
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css" >
   </head>
 
   <body>
     <!-- Header Section -->
-    <header>
+    <header class="header">
       <nav class="nav">
         <a href="index.html">
           <img class="nav-logo" src="./images/logo.svg" alt="Logo" >
@@ -30,7 +31,6 @@
           </li>
         </ul>
       </nav>
-      <br>
       <address class="address">
         <ul class="address-list list">
           <li class="address-list-item">
@@ -45,7 +45,6 @@
         </ul>
       </address>
     </header>
-    <br>
     <!-- Main Section -->
     <main>
       <!-- Filter Buttons -->
@@ -75,7 +74,6 @@
           </li>
         </ul>
       </section>
-      <br>
       <!-- Section Projects 1 -->
       <section class="section projects1">
         <h2 class="section-projects1-heading-text" hidden>Project1 Lists</h2>
@@ -88,7 +86,6 @@
             >
             <h3 class="project-item-text-project-name">Banking App Interface Concept</h3>
             <p class="project-item-text-project-type">App</p>
-            <br> 
           </li>
           <li class="projects1-list-item">
             <img
@@ -98,7 +95,6 @@
             >
             <h3 class="project-item-text-project-name">Cashless Payment</h3>
             <p class="project-item-text-project-type">Marketing</p>
-            <br>
           </li>
           <li class="projects1-list-item">
             <img
@@ -111,7 +107,6 @@
           </li>
         </ul>
       </section>
-      <br>
       <!-- Section Projects 2 -->
       <section class="section projects2 list">
         <h2 class="section-projects2-heading-text" hidden>Project2 Lists</h2>
@@ -134,7 +129,6 @@
             >
             <h3 class="project-item-text-project-name">Screen Illustrations</h3>
             <p class="project-item-text-project-type">Design</p>
-            <br>
           </li>
           <li class="projects2-list-item">
             <img
@@ -147,7 +141,6 @@
           </li>
         </ul>
       </section>
-      <br>
       <!-- Section Projects 3 -->
       <section class="section projects3">
         <h2 class="section-projects3-heading-text" hidden>Project3 Lists</h2>
@@ -160,7 +153,6 @@
             >
             <h3 class="project-item-text-project-name">Instagram Stories</h3>
             <p class="project-item-text-project-type">Design</p>
-            <br>
           </li>
           <li class="projects3-list-item">
             <img
@@ -170,7 +162,6 @@
             >
             <h3 class="project-item-text-project-name">Organic Food</h3>
             <p class="project-item-text-project-type">Web Site</p>
-            <br>
           </li>
           <li class="projects3-list-item">
             <img
@@ -185,12 +176,10 @@
       </section>
     </main>
    <!-- Footer Section -->
-   <br>
    <footer class="footer">
      <a href="index.html">
        <p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
      </a>
-     <br>
      <p class="footer-text">
        Increase the flow of customers and <br>
        sales for your business with digital <br>
