Completed Portfolio Content

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
       <section class="section projects1">
         <h2 class="section-projects1-heading-text" hidden>Project1 Lists</h2>
         <ul class="section-projects1-list list">
-          <li class="projects1-list-item">
+          <li class="projects1-list-item projects-list-item">
             <img
               class="project1-item-image"
               src="images/row1-project-card1.jpg"
@@ -87,7 +87,7 @@
             <h3 class="project-item-text-project-name">Banking App Interface Concept</h3>
             <p class="project-item-text-project-type">App</p>
           </li>
-          <li class="projects1-list-item">
+          <li class="projects1-list-item projects-list-item">
             <img
               class="project1-item-image"
               src="images/row1-project-card2.jpg"
@@ -96,7 +96,7 @@
             <h3 class="project-item-text-project-name">Cashless Payment</h3>
             <p class="project-item-text-project-type">Marketing</p>
           </li>
-          <li class="projects1-list-item">
+          <li class="projects1-list-item projects-list-item">
             <img
               class="project1-item-image"
               src="images/row1-project-card3.jpg"
@@ -108,10 +108,10 @@
         </ul>
       </section>
       <!-- Section Projects 2 -->
-      <section class="section projects2 list">
+      <section class="section projects2">
         <h2 class="section-projects2-heading-text" hidden>Project2 Lists</h2>
         <ul class="section-projects2-list">
-          <li class="projects2-list-item">
+          <li class="projects2-list-item projects-list-item">
             <img
               class="project2-item-image"
               src="images/row2-project-card1.jpg"
@@ -121,7 +121,7 @@
             <p class="project-item-text-project-type">Marketing</p>
           </li>
 
-          <li class="projects2-list-item">
+          <li class="projects2-list-item projects-list-item">
             <img
               class="project2-item-image"
               src="images/row2-project-card2.jpg"
@@ -130,7 +130,7 @@
             <h3 class="project-item-text-project-name">Screen Illustrations</h3>
             <p class="project-item-text-project-type">Design</p>
           </li>
-          <li class="projects2-list-item">
+          <li class="projects2-list-item projects-list-item">
             <img
               class="project2-item-image"
               src="images/row2-project-card3.jpg"
@@ -145,7 +145,7 @@
       <section class="section projects3">
         <h2 class="section-projects3-heading-text" hidden>Project3 Lists</h2>
         <ul class="section-projects3-list list">
-          <li class="projects3-list-item">
+          <li class="projects3-list-item projects-list-item">
             <img
               class="project3-item-image"
               src="images/row3-project-card1.jpg"
@@ -154,7 +154,7 @@
             <h3 class="project-item-text-project-name">Instagram Stories</h3>
             <p class="project-item-text-project-type">Design</p>
           </li>
-          <li class="projects3-list-item">
+          <li class="projects3-list-item projects-list-item">
             <img
               class="project3-item-image"
               src="images/row3-project-card2.jpg"
@@ -163,7 +163,7 @@
             <h3 class="project-item-text-project-name">Organic Food</h3>
             <p class="project-item-text-project-type">Web Site</p>
           </li>
-          <li class="projects3-list-item">
+          <li class="projects3-list-item projects-list-item">
             <img
               class="project3-item-image"
               src="images/row3-project-card3.jpg"
