Update Content Based On Mentor Comment

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <!-- Header Section -->
     <header class="header">
+      <div class ="container main-header-container">
         <nav class="nav">
           <a href="index.html">
             <img class="nav-logo" src="./images/logo.svg" alt="Logo" >
@@ -40,106 +41,125 @@
             </li>
           </ul>
         </address>
+      </div>
     </header>  
     <!-- Main Section -->
     <main>
       <section class="section hero">
-        <h1 class="section-hero-heading-text">
-          Effective Solutions <br>
-          for Your Business
-        </h1>
-        <button class="section-hero-button" type="button">Order Service</button>
+        <div class="container hero-container">
+          <h1 class="section-hero-heading-text">
+            Effective Solutions <br>
+            for Your Business
+          </h1>
+          <button class="section-hero-button" type="button">Order Service</button>
+        </div>  
       </section>
 
       <section class="section feature">
-        <h2 class="section-feature-heading-text" hidden>Features</h2>
-        <ul class="feature-list list">
-          <li class="feature-list-item">
-            <h3 class="feature-list-item-heading-text">Strategy</h3>
-            <p class="feature-list-item-content">
-              Our goal is to identify the business <br>
-              problem to walk away with the <br>
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-item-heading-text">Punctuality</h3>
-            <p class="feature-list-item-content">
-              Bring the key message to the <br>
-              brand's audience for the best price <br>
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-item-heading-text">Diligence</h3>
-            <p class="feature-list-item-content">
-              Research and confirm brands that <br>
-              present the strongest digital growth <br>
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature-list-item">
-            <h3 class="feature-list-item-heading-text">Technologies</h3>
-            <p class="feature-list-item-content">
-              Design practice focused on digital <br>
-              experiences. We bring forth a deep <br>
-              passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container feature-container">
+          <h2 class="section-feature-heading-text" hidden>Features</h2>
+          <ul class="feature-list list">
+            <li class="feature-list-item">
+              <h3 class="feature-list-item-heading-text">Strategy</h3>
+              <p class="feature-list-item-content">
+                Our goal is to identify the business <br>
+                problem to walk away with the <br>
+                perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="feature-list-item-heading-text">Punctuality</h3>
+              <p class="feature-list-item-content">
+                Bring the key message to the <br>
+                brand's audience for the best price <br>
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="feature-list-item-heading-text">Diligence</h3>
+              <p class="feature-list-item-content">
+                Research and confirm brands that <br>
+                present the strongest digital growth <br>
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="feature-list-item-heading-text">Technologies</h3>
+              <p class="feature-list-item-content">
+                Design practice focused on digital <br>
+                experiences. We bring forth a deep <br>
+                passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>     
       </section>
 
       <section class="section product">
-        <h2 class="section-product-heading-text">What are we doing</h2>
-        <ul class="product-list list">
-          <li class="product-list-item">
-            <img class="product-list-item-img" src="images/wawd-img1.jpg" alt="What are we doing image1">
-          </li>
-          <li class="product-list-item">
-            <img class="product-list-item-img" src="images/wawd-img2.jpg" alt="What are we doing image2">
-          </li>
-          <li class="product-list-item">
-            <img class="product-list-item-img" src="images/wawd-img3.jpg" alt="What are we doing image3">
-          </li>
-        </ul>
+        <div class="container product-container">
+          <h2 class="section-product-heading-text">What are we doing</h2>
+          <ul class="product-list list">
+            <li class="product-list-item">
+              <img class="product-list-item-img" src="images/wawd-img1.jpg" alt="What are we doing image1">
+            </li>
+            <li class="product-list-item">
+              <img class="product-list-item-img" src="images/wawd-img2.jpg" alt="What are we doing image2">
+            </li>
+            <li class="product-list-item">
+              <img class="product-list-item-img" src="images/wawd-img3.jpg" alt="What are we doing image3">
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section team">
-        <h2 class="section-team-heading-text">Our Team</h2>
-        <ul class="team-list list">
-          <li class="team-list-item">
-            <img class="team-list-item-img" src="images/ot-img1.jpg" alt="Product Designer">
-            <h3 class="team-list-item-name">Mark Guerrero</h3>
-            <p class="team-list-item-position">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img class="team-list-item-img" src="images/ot-img2.jpg" alt="Frontend Developer">
-            <h3 class="team-list-item-name">Tom Ford</h3>
-            <p class="team-list-item-position">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img class="team-list-item-img" src="images/ot-img3.jpg" alt="Marketing">
-            <h3 class="team-list-item-name">Camila Garcia</h3>
-            <p class="team-list-item-position">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img class="team-list-item-img" src="images/ot-img4.jpg" alt="UI Designer">
-            <h3 class="team-list-item-name">Daniel Wilson</h3>
-            <p class="team-list-item-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container team-container">
+          <h2 class="section-team-heading-text">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-list-item">
+              <img class="team-list-item-img" src="images/ot-img1.jpg" alt="Product Designer">
+              <div class="team-item-details">
+                <h3 class="team-list-item-name">Mark Guerrero</h3>
+                <p class="team-list-item-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img class="team-list-item-img" src="images/ot-img2.jpg" alt="Frontend Developer">
+              <div class="team-item-details">
+                <h3 class="team-list-item-name">Tom Ford</h3>
+                <p class="team-list-item-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img class="team-list-item-img" src="images/ot-img3.jpg" alt="Marketing">
+              <div class="team-item-details">
+                <h3 class="team-list-item-name">Camila Garcia</h3>
+                <p class="team-list-item-position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img class="team-list-item-img" src="images/ot-img4.jpg" alt="UI Designer">
+              <div class="team-item-details">
+                <h3 class="team-list-item-name">Daniel Wilson</h3>
+              <p class="team-list-item-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer Section -->
     <footer class="footer">
-      <a href="index.html">
-        <p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and <br>
-        sales for your business with digital <br>
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="index.html">
+          <p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and <br>
+          sales for your business with digital <br>
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
