--- a/portfolio.html
+++ b/portfolio.html
@@ -15,176 +15,206 @@
   <body>
     <!-- Header Section -->
     <header class="header">
-      <nav class="nav">
-        <a href="index.html">
-          <img class="nav-logo" src="./images/logo.svg" alt="Logo" >
-        </a>
-        <ul class="nav-list list">
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-list-item">
-            <a class="nav-list-item-link" href="./index.html">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-list list">
-          <li class="address-list-item">
-            <a class="address-list-item-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-list-item">
-            <a class="address-list-item-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class ="container main-header-container">
+        <nav class="nav">
+          <a href="index.html">
+            <img class="nav-logo" src="./images/logo.svg" alt="Logo">
+          </a>
+          <ul class="nav-list list">
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-list-item-link" href="./index.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list list">
+            <li class="address-list-item">
+              <a class="address-list-item-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-list-item">
+              <a class="address-list-item-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main Section -->
     <main>
       <!-- Filter Buttons -->
       <section class="section portfolio">
-        <h2 class="section-portfolio-heading-text" hidden>Portfolio Filter</h2>
-        <ul class="portfolio-projects-list list">
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button active-button" type="button">
-              All
-            </button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">
-              Web Site
-            </button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">App</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">Design</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
+        <div class ="container portfolio-container"> 
+          <h2 class="section-portfolio-heading-text" hidden>Portfolio Filter</h2>
+          <ul class="portfolio-projects-list list">
+            <li class="portfolio-list-item">
+              <button class="portfolio-item-button active-button" type="button">
+                All
+              </button>
+            </li>
+            <li class="portfolio-list-item">
+              <button class="portfolio-item-button" type="button">
+                Web Site
+              </button>
+            </li>
+            <li class="portfolio-list-item">
+              <button class="portfolio-item-button" type="button">App</button>
+            </li>
+            <li class="portfolio-list-item">
+              <button class="portfolio-item-button" type="button">Design</button>
+            </li>
+            <li class="portfolio-list-item">
+              <button class="portfolio-item-button" type="button">
+                Marketing
+              </button>
+            </li>
+          </ul>
+        </div> 
       </section>
       <!-- Section Projects 1 -->
       <section class="section projects1">
-        <h2 class="section-projects1-heading-text" hidden>Project1 Lists</h2>
-        <ul class="section-projects1-list list">
-          <li class="projects1-list-item projects-list-item">
-            <img
-              class="project1-item-image"
-              src="images/row1-project-card1.jpg"
-              alt="Banking App Interface Concept"
-            >
-            <h3 class="project-item-text-project-name">Banking App Interface Concept</h3>
-            <p class="project-item-text-project-type">App</p>
-          </li>
-          <li class="projects1-list-item projects-list-item">
-            <img
-              class="project1-item-image"
-              src="images/row1-project-card2.jpg"
-              alt="Cashless Payment"
-            >
-            <h3 class="project-item-text-project-name">Cashless Payment</h3>
-            <p class="project-item-text-project-type">Marketing</p>
-          </li>
-          <li class="projects1-list-item projects-list-item">
-            <img
-              class="project1-item-image"
-              src="images/row1-project-card3.jpg"
-              alt="Mediation App"
-            >
-            <h3 class="project-item-text-project-name">Mediation App</h3>
-            <p class="project-item-text-project-type">App</p>
-          </li>
-        </ul>
+        <div class ="container project1-container">
+          <h2 class="section-projects1-heading-text" hidden>Project1 Lists</h2>
+          <ul class="section-projects1-list list">
+            <li class="projects1-list-item projects-list-item">
+              <img
+                class="project1-item-image"
+                src="images/row1-project-card1.jpg"
+                alt="Banking App Interface Concept"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Banking App Interface Concept</h3>
+                <p class="project-item-text-project-type">App</p>
+              </div>
+            </li>
+            <li class="projects1-list-item projects-list-item">
+              <img
+                class="project1-item-image"
+                src="images/row1-project-card2.jpg"
+                alt="Cashless Payment"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Cashless Payment</h3>
+                <p class="project-item-text-project-type">Marketing</p>
+              </div>
+            </li>
+            <li class="projects1-list-item projects-list-item">
+              <img
+                class="project1-item-image"
+                src="images/row1-project-card3.jpg"
+                alt="Mediation App"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Mediation App</h3>
+                <p class="project-item-text-project-type">App</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section Projects 2 -->
       <section class="section projects2">
-        <h2 class="section-projects2-heading-text" hidden>Project2 Lists</h2>
-        <ul class="section-projects2-list">
-          <li class="projects2-list-item projects-list-item">
-            <img
-              class="project2-item-image"
-              src="images/row2-project-card1.jpg"
-              alt="Taxi Service"
-            >
-            <h3 class="project-item-text-project-name">Taxi Service</h3>
-            <p class="project-item-text-project-type">Marketing</p>
-          </li>
+        <div class ="container project2-container">
+          <h2 class="section-projects2-heading-text" hidden>Project2 Lists</h2>
+          <ul class="section-projects2-list">
+            <li class="projects2-list-item projects-list-item">
+              <img
+                class="project2-item-image"
+                src="images/row2-project-card1.jpg"
+                alt="Taxi Service"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Taxi Service</h3>
+                <p class="project-item-text-project-type">Marketing</p>
+              </div>
+            </li>
 
-          <li class="projects2-list-item projects-list-item">
-            <img
-              class="project2-item-image"
-              src="images/row2-project-card2.jpg"
-              alt="Screen Illustrations"
-            >
-            <h3 class="project-item-text-project-name">Screen Illustrations</h3>
-            <p class="project-item-text-project-type">Design</p>
-          </li>
-          <li class="projects2-list-item projects-list-item">
-            <img
-              class="project2-item-image"
-              src="images/row2-project-card3.jpg"
-              alt="Online Courses"
-            >
-            <h3 class="project-item-text-project-name">Online Courses</h3>
-            <p class="project-item-text-project-type">Marketing</p>
-          </li>
-        </ul>
+            <li class="projects2-list-item projects-list-item">
+              <img
+                class="project2-item-image"
+                src="images/row2-project-card2.jpg"
+                alt="Screen Illustrations"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Screen Illustrations</h3>
+                <p class="project-item-text-project-type">Design</p>
+              </div>
+            </li>
+            <li class="projects2-list-item projects-list-item">
+              <img
+                class="project2-item-image"
+                src="images/row2-project-card3.jpg"
+                alt="Online Courses"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Online Courses</h3>
+                <p class="project-item-text-project-type">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section Projects 3 -->
       <section class="section projects3">
-        <h2 class="section-projects3-heading-text" hidden>Project3 Lists</h2>
-        <ul class="section-projects3-list list">
-          <li class="projects3-list-item projects-list-item">
-            <img
-              class="project3-item-image"
-              src="images/row3-project-card1.jpg"
-              alt="Instagram Stories"
-            >
-            <h3 class="project-item-text-project-name">Instagram Stories</h3>
-            <p class="project-item-text-project-type">Design</p>
-          </li>
-          <li class="projects3-list-item projects-list-item">
-            <img
-              class="project3-item-image"
-              src="images/row3-project-card2.jpg"
-              alt="Organic Food"
-            >
-            <h3 class="project-item-text-project-name">Organic Food</h3>
-            <p class="project-item-text-project-type">Web Site</p>
-          </li>
-          <li class="projects3-list-item projects-list-item">
-            <img
-              class="project3-item-image"
-              src="images/row3-project-card3.jpg"
-              alt="Fresh Coffee"
-            >
-            <h3 class="project-item-text-project-name">Fresh Coffee</h3>
-            <p class="project-item-text-project-type">Web Site</p>
-          </li>
-        </ul>
+        <div class ="container project3-container">
+          <h2 class="section-projects3-heading-text" hidden>Project3 Lists</h2>
+          <ul class="section-projects3-list list">
+            <li class="projects3-list-item projects-list-item">
+              <img
+                class="project3-item-image"
+                src="images/row3-project-card1.jpg"
+                alt="Instagram Stories"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Instagram Stories</h3>
+                <p class="project-item-text-project-type">Design</p>
+              </div>
+            </li>
+            <li class="projects3-list-item projects-list-item">
+              <img
+                class="project3-item-image"
+                src="images/row3-project-card2.jpg"
+                alt="Organic Food"
+              >
+              <div class="project-item-details">
+                <h3 class="project-item-text-project-name">Organic Food</h3>
+                <p class="project-item-text-project-type">Web Site</p>
+              </div>
+            </li>
+            <li class="projects3-list-item projects-list-item">
+              <img
+                class="project3-item-image"
+                src="images/row3-project-card3.jpg"
+                alt="Fresh Coffee"
+              >
+              <div class="project-item-details"> 
+                <h3 class="project-item-text-project-name">Fresh Coffee</h3>
+                <p class="project-item-text-project-type">Web Site</p>
+              </div> 
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
    <!-- Footer Section -->
    <footer class="footer">
-     <a href="index.html">
-       <p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
-     </a>
-     <p class="footer-text">
-       Increase the flow of customers and <br>
-       sales for your business with digital <br>
-       marketing & growth solutions.
-     </p>
+    <div class="container footer-container">
+      <a href="index.html">
+        <p><span class="span-web">WEB</span><span class="span-studio">STUDIO</span></p>
+      </a>
+      <p class="footer-text">
+        Increase the flow of customers and <br>
+        sales for your business with digital <br>
+        marketing & growth solutions.
+      </p>
+    </div>
    </footer>
   </body>
 </html>
