Update Content Based on Mentor Comment

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,11 +79,11 @@
         </div> 
       </section>
       <!-- Section Projects 1 -->
-      <section class="section projects1">
-        <div class ="container project1-container">
-          <h2 class="section-projects1-heading-text" hidden>Project1 Lists</h2>
-          <ul class="section-projects1-list list">
-            <li class="projects1-list-item projects-list-item">
+      <section class="section projects">
+        <div class ="container project-container">
+          <h2 class="section-projects-heading-text" hidden>Project1 Lists</h2>
+          <ul class="section-projects-list list">
+            <li class="projects-list-item">
               <img
                 class="project1-item-image"
                 src="images/row1-project-card1.jpg"
@@ -94,9 +94,9 @@
                 <p class="project-item-text-project-type">App</p>
               </div>
             </li>
-            <li class="projects1-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project1-item-image"
+                class="project-item-image"
                 src="images/row1-project-card2.jpg"
                 alt="Cashless Payment"
               >
@@ -105,9 +105,9 @@
                 <p class="project-item-text-project-type">Marketing</p>
               </div>
             </li>
-            <li class="projects1-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project1-item-image"
+                class="project-item-image"
                 src="images/row1-project-card3.jpg"
                 alt="Mediation App"
               >
@@ -116,17 +116,9 @@
                 <p class="project-item-text-project-type">App</p>
               </div>
             </li>
-          </ul>
-        </div>
-      </section>
-      <!-- Section Projects 2 -->
-      <section class="section projects2">
-        <div class ="container project2-container">
-          <h2 class="section-projects2-heading-text" hidden>Project2 Lists</h2>
-          <ul class="section-projects2-list">
-            <li class="projects2-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project2-item-image"
+                class="project-item-image"
                 src="images/row2-project-card1.jpg"
                 alt="Taxi Service"
               >
@@ -136,9 +128,9 @@
               </div>
             </li>
 
-            <li class="projects2-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project2-item-image"
+                class="project-item-image"
                 src="images/row2-project-card2.jpg"
                 alt="Screen Illustrations"
               >
@@ -147,9 +139,9 @@
                 <p class="project-item-text-project-type">Design</p>
               </div>
             </li>
-            <li class="projects2-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project2-item-image"
+                class="project-item-image"
                 src="images/row2-project-card3.jpg"
                 alt="Online Courses"
               >
@@ -158,17 +150,9 @@
                 <p class="project-item-text-project-type">Marketing</p>
               </div>
             </li>
-          </ul>
-        </div>
-      </section>
-      <!-- Section Projects 3 -->
-      <section class="section projects3">
-        <div class ="container project3-container">
-          <h2 class="section-projects3-heading-text" hidden>Project3 Lists</h2>
-          <ul class="section-projects3-list list">
-            <li class="projects3-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project3-item-image"
+                class="project-item-image"
                 src="images/row3-project-card1.jpg"
                 alt="Instagram Stories"
               >
@@ -177,9 +161,9 @@
                 <p class="project-item-text-project-type">Design</p>
               </div>
             </li>
-            <li class="projects3-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project3-item-image"
+                class="project-item-image"
                 src="images/row3-project-card2.jpg"
                 alt="Organic Food"
               >
@@ -188,9 +172,9 @@
                 <p class="project-item-text-project-type">Web Site</p>
               </div>
             </li>
-            <li class="projects3-list-item projects-list-item">
+            <li class="projects-list-item">
               <img
-                class="project3-item-image"
+                class="project-item-image"
                 src="images/row3-project-card3.jpg"
                 alt="Fresh Coffee"
               >
