--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a class="nav-list-item-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-item-link" href="/goit-markup-hw-02/">Contacts</a>
+              <a class="nav-list-item-link" href="./index.html">Contacts</a>
             </li>
           </ul>
         </nav>
